--- a/research.html
+++ b/research.html
@@ -51,7 +51,7 @@
                     <p>Representative findings are:
                         <ul style="list-style-type:square">
                         <li>In predictive analytics, <a href="https://dspace.mit.edu/handle/1721.1/116314?show=full">text source and predictive horizon</a> are two primary factors to consider.</li>                         
-                        <li><a href="https://www.growkudos.com/publications/10.1145%25252F3580480/reader">Parallel knowledge integration</a> is a more effective approach to build a neuro-symbolic model for TABFSA (targeted aspect-based financial sentiment analysis)</li> 
+                        <li><a href="https://www.growkudos.com/publications/10.1145%25252F3580480/reader">Parallel knowledge integration</a> is the most effective approach to build a neuro-symbolic model for financial sentiment analysis.</li> 
                         </ul>
                       </p>
                 </div>
@@ -74,7 +74,7 @@
                     <p>Understanding financial texts requires dealing with a lot of numbers, time expressions, and contextualized arguments, many of which are not possible without external resources. Well-curated knowledge is therefore, always important. Today, most NLP studies benifit, directly or indirectly, from early efforts such as WordNet and DBpedia. In that sense, knowledge is both the purpose and the instrument (ct. Sukhomlinskii).
                   </p>
                   <p>
-                    Showcases under this umbrella include the <a href="https://aclanthology.org/W19-5501/">NEEQ business classification system</a>, and a <a href="https://doi.org/10.1016/j.ipm.2018.11.002">lexicon domain-adaptation method</a>, and FinSenticNet. 
+                    Showcases under this umbrella include <a href="https://aclanthology.org/W19-5501/">NEEQ business taxonomy</a>, <a href="https://sentic.net/finsenticnet.pdf">FinSenticNet</a>, and a <a href="https://doi.org/10.1016/j.ipm.2018.11.002">lexicon domain-adaptation method</a>. 
                   </p>
                 </div>
                 <br />
