--- a/research.html
+++ b/research.html
@@ -84,8 +84,7 @@
                     <h2 id="u-gf">Green IT and green finance</h2>
                     <p>Certain economic activities and developments have negative externality: a typical example is environmental pollution, and climate change, when it becomes a global problem. The way how we use technology makes a huge difference. The first wave of IT, for instance office automation, had many good environmental impacts. But with the recent prevalence of AI, we should be cautious about low efficiency or even destructive computing. Sometimes, unregulated use can turn a powerful invention into an existential threat. Some key questions to ask are:
                     <ul style="list-style-type:square">
-                        <li>Can text mining be used to discover and support greener and innovative ideas?</li>
-                        <li>What kind of IT development and infrastructure would promote ESG investing and financing?</li> 
+                        <li>How can text mining be used to discover and support greener and innovative ideas?</li>
                         </ul>  
                     </p>
                 </div>
