--- a/pub.html
+++ b/pub.html
@@ -67,8 +67,9 @@
       <h2>Data & Resources</h2>
       <a href="https://github.com/fxing79/FusedChat">FusedChat</a>: a dataset for training mixed-purpose dialogue systems<br />
       <a href="https://frank-xing.info/fsa.zip">StockSen</a>: a dataset for benchmarking financial sentiment analysis accuracy<br />
+      <a href="https://frank-xing.info/cmc.zip">CMC</a>: a dataset for financial sentiment analysis with emojis (social media)<br />
       <a href="http://github.com/SenticNet/neeq-annual-reports/">NEEQ Annual Reports Data</a>: company profiles from the Chinese National Equities Exchange and Quotations system<br />
-      <a href="https://frank-xing.info/f-sn.zip">FinSenticNet</a>: a concept-level financial sentiment dictionary<br />    
+      <a href="https://frank-xing.info/f-sn.zip">FinSenticNet</a>: a concept-level financial sentiment dictionary<br /> 
       <a href="https://sentic.net/senticnet.zip">SenticNet-7</a>: a concept-level sentiment information knowledge base<br />
 
 
