--- a/teaching.html
+++ b/teaching.html
@@ -44,10 +44,9 @@
 
     <h2 id="courses">Course information</h2>
     <p>
-      IS3107 Data Engineering (Fall 2023) <a href="/is3107-23x.pdf">[syllabus]</a></br>
+      BT4016 Risk Analytics for Financial Services (Spring 2024) <a href="/BT4016-2024-Syllabus.pdf">[syllabus]</a></br>
       BT4016 Risk Analytics for Financial Services (Spring 2023) </br>
-      IS3107 Data Engineering (Fall 2022) </br>
-      IS3107 Data Engineering (Spring 2022) </br>      
+      IS3107 Data Engineering (Fall 2023, Spring&Fall 2022) </br>      
       IS6000 Topics in Information Systems and Analytics Research (Fall 2021) 
     </p>
 
