--- a/group.html
+++ b/group.html
@@ -43,27 +43,25 @@
             	<div class="contents">
 
     <p>
-    The FIKE (Financial Information & Knowledge Engineering) group,</br>
-    pronounced /'faɪkə/, is <b>not</b> a Lab,</br>
-    but a decentralized interest group conceived by Frank Xing.</br>
+    The FIKE (Financial Information & Knowledge Engineering) group, pronounced /'faɪkə/, is <b>not</b> a Lab,</br>
+    but an interest group conceived by Frank Xing.</br>
 </br>
     The shared mission of FIKE is to:</br>
-    (1) advance understanding of finance in the digital era, by research, and</br>
-    (2) solve IT challendges for the finance industry. 
+    (1) advance understanding of finance in the digital era</br>
+    (2) solve intellectual challenges and shape the future for the finance industry. 
     </br>
 
     <h2 id="core-m">Core members</h2>
     <p>
     Qi Qi (PhD student @ NUS)</br>
-    Guan Xing (PhD student @ NUS)</br>
-    Chung-I Lu (PhD student @ NUS)</br>
     Kelvin Du (PhD student @ NTU)</br>
     </p>
 
     <h2 id="aff-m">Collaborators</h2>
     <p>
       Lorenzo Malandri (Asst Prof @ Unimib)</br>
-      Jiahua Zhu (Asst Prof @ TJU)
+      Chenghang Wang (Research Asst @ NUS)</br>
+      Paulo Azevedo (Research Scholar @ NHH)
     </p>
     
     <h2 id="alm-m">Alumni</h2>
