--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 
 
     <h2 id="news">News</h2>
-              <p>※ Dec 2023: See you in Hyderabad ;)</p>
+              <p>※ Aug 2024: Going for ACL, see you in Bangkok ;)</p>
+              <p>※ May 2024: We have published a <a href="https://dl.acm.org/doi/10.1145/3649451">CSUR</a> paper that summarizes everything about FSA (before Gen-AI)...</p>
+              <p>※ Dec 2023: Going for ICIS, see you in Hyderabad ;)</p>
                   <p>※ May 2023: Three undergrad students successfully defended their theses on financial text mining and algorithmic trading. Congratulations to them!</p>
 
 
