--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       School of Computing<br />
       National University of Singapore<br />
       <br />
-      Where to find: (physically) COM2-03-39, or (online) xing(ατ)nus.edu.sg.&nbsp;&nbsp;[<a href="https://calendar.google.com/calendar/embed?src=xingzhutian%40gmail.com&ctz=Asia%2FSingapore">calendar</a>]&nbsp;&nbsp;[<a href="/cvfx.pdf">curriculum vitae</a>]<br />
+      Where to find: (physically) COM2-03-39, or (online) xing(ατ)nus.edu.sg.&nbsp;&nbsp;[<a href="https://calendar.google.com/calendar/embed?src=xingzhutian%40gmail.com&ctz=Asia%2FSingapore">calendar</a>]&nbsp;&nbsp;<br />
       <p>
 
 
