--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
       
       <h1>Frank Xing, PhD | 邢竹天</h1>
       <br />
-      Assistant Professor, School of Computing, National University of Singapore<br />
+      Assistant Professor<br />
+      School of Computing, National University of Singapore<br />
       <br />
       <br />
-      Where to find me office(ατ)COM2-03-39, or email:xing(ατ)nus.edu.sg<br />
+      <strong>Where to find me</strong> office:COM2-03-39, emailto:xing(ατ)nus.edu.sg<br />
       [<a href="https://calendar.google.com/calendar/embed?src=xingzhutian%40gmail.com&ctz=Asia%2FSingapore">calendar</a>]&nbsp;&nbsp;[<a href="/cvfx.pdf">curriculum vitae</a>]&nbsp;&nbsp;<br />
       <p>
 
@@ -56,13 +57,13 @@
     <h2 id="bio">About me</h2>
 
     <p>
-    I am, broadly speaking, an information scientist. I lived in Wuhan, Beijing, and Hong Kong before moving to Singapore. </p>
+    I am an information scientist and Assistant Professor at NUS. Prior to moving to Singapore, I lived in Wuhan, Beijing, and Hong Kong.</p>
     <p>
-    I spend time <a href="https://www.comp.nus.edu.sg/disa/bio/fxing/">teaching</a>, thinking, and being with family.
+    I spend my time teaching, thinking, and being with my family.
     </p>
 
     <h2 id="fun">Fun facts</h2>
-            <p onclick="collapse('ag')">※ My academic genealogy (observation from history: don't be afraid to cross over) [<u>click here to expand</u>].<br />
+            <p onclick="collapse('ag')">※ My academic genealogy [<u>click here to expand the tree</u>].<br />
             <ul class="domtree" id="ag" style="display: none">
 
               <style>
