--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   <div class="last">
   <div class="node">
   <div class="person">
-  Andreas von Ettingshausen (1817, mathematician)
+  <a href="https://en.wikipedia.org/wiki/Andreas_von_Ettingshausen">Andreas von Ettingshausen</a> (1817, mathematician)
   </div>
   </div>
 </div>
@@ -236,7 +236,7 @@
 <div class="last">
   <div class="node">
     <div class="person">
-    Hermann Volrath Hilprecht (1883, archaeologist)
+    <a href="https://en.wikipedia.org/wiki/Hermann_Volrath_Hilprecht">Hermann Volrath Hilprecht</a> (1883, archaeologist)
     </div>
   </div>
 
