--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       School of Computing, National University of Singapore<br />
       <br />
       <br />
-      <strong>Where to find me</strong> office:COM2-03-39, emailto:xing(ατ)nus.edu.sg<br />
+      <strong>Where to find me</strong> office: COM2-03-39 &nbsp;&nbsp;&nbsp;&nbsp; emailto: xing(ατ)nus.edu.sg<br />
       [<a href="https://calendar.google.com/calendar/embed?src=xingzhutian%40gmail.com&ctz=Asia%2FSingapore">calendar</a>]&nbsp;&nbsp;[<a href="/cvfx.pdf">curriculum vitae</a>]&nbsp;&nbsp;<br />
       <p>
 
