--- a/teaching.html
+++ b/teaching.html
@@ -32,9 +32,7 @@
               <ul>
                 <li> <a class="extra" href="/">Home</a></li>
                 <li><a class="extra" href="/research">Research</a></li>
-                <li><a class="extra" href="/pub">Publications</a></li>
                 <li><a class="extra" href="/teaching">Teaching</a></li>
-                <li><a class="extra" href="/group">Group</a></li>
               </ul>
               </div>
            
@@ -43,11 +41,14 @@
               <div class="contents">
 
     <h2 id="courses">Course information</h2>
-    <p>
-      IS3107 Data Engineering (Fall 2024) <a href="/IS3107-2024-Syllabus.pdf">[syllabus]</a></br>
-      BT4016 Risk Analytics for Financial Services (Spring 2024, Spring 2023) </br>
-      IS3107 Data Engineering (Fall 2023, Spring&Fall 2022) </br>      
-      IS6000 Topics in Information Systems and Analytics Research (Fall 2021) 
+    <p>This semester, I am teaching "BT4103 Business Analytics Capstone Project".</br>
+            </br>
+       In the past, I have taught:</br>
+IS3107 Data Engineering: 2024 Fall, 2023 Fall, 2022 Fall, 2022 Spring </br>
+BT4016 Risk Analytics for Financial Services: 2024 Spring, 2023 Spring </br>
+IS6000 Topics in Information Systems and Analytics Research: 2021 Fall </br>
+CZ 4034 Introduction to Information Retrieval (TA): 2021 Spring, 2016 Spring </br>
+CZ 2002 Object Oriented Design & Programming in Java (TA): 2016 Spring </br>
     </p>
 
 
