--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <p><img class="profilepic" src="images/happy570.jpg" /></p>
       
-      <h1>Frank Xing, PhD | 邢竹天</h1>
+      <h1>Frank Xing</h1>
       <br />
       Assistant Professor<br />
       School of Computing, National University of Singapore<br />
@@ -57,7 +57,7 @@
     <h2 id="bio">About me</h2>
 
     <p>
-    I am an information scientist and Assistant Professor at NUS. Prior to moving to Singapore, I lived in Wuhan, Beijing, and Hong Kong.</p>
+    I am an information scientist and Assistant Professor at NUS. Prior to moving to Singapore, I lived in Wuhan, Beijing, and Hong Kong. My bio can be found here: [<a href="https://orcid.org/0000-0002-5751-3937">BIO</a>]</p>
     <p>
     I spend my time teaching, thinking, and being with my family.
     </p>
