--- a/research.html
+++ b/research.html
@@ -40,75 +40,71 @@
 
             	<div class="contents">
 
-                            <h2 id="bio">Selected Publications</h2>
+                            <h2 id="bio">Recent Publications</h2>
 
           <ul style="list-style-type:square">
 
-          <li>Xing, F. (2025). <a href="https://dl.acm.org/doi/pdf/10.1145/3688399">Designing Heterogeneous LLM Agents for Financial Sentiment Analysis</a>. <i>ACM Transactions on Management Information Systems</i>.</li>
+          <li><a href="https://dl.acm.org/doi/pdf/10.1145/3688399">Designing Heterogeneous LLM Agents for Financial Sentiment Analysis</a>. <i>ACM TMIS</i> 16(1) pp 1-24, 2025.</li>
 
-          <li>Du, K.; Xing, F.; Mao, R.; Cambria, E. (2024). <a href="https://dl.acm.org/doi/pdf/10.1145/3649451">Financial Sentiment Analysis: Techniques and Applications</a>. <i>ACM Computing Surveys</i> 56(9) pp 1-42.</li>
+          <li><a href="https://ieeexplore.ieee.org/abstract/document/10878303">Happiness Prediction with Domain Knowledge Integration and Explanation Consistency</a>. <i>IEEE TCSS</i> doi:10.1109/TCSS.2025.3529946, 2025.</li>
 
-          <li>Chen, S.; Xing, F. (2023). <a href="https://frank-xing.info/Understanding%20Emojis%20for%20Financial%20Sentiment%20Analysis.pdf">Understanding Emojis for Financial Sentiment Analysis</a>. <i>ICIS</i>.</li>
-
-          <li>Xing, F.; Malandri, L; Zhang, Y.; Cambria, E. (2020). <a href="https://aclanthology.org/2020.coling-main.85.pdf">Financial Sentiment Analysis: No Silver Bullet and An Investigation into the Common Mistakes</a>. <i>COLING</i>. <a href="https://frank-xing.info/fsa.zip">[data]</a></li>
-
-          <li>Xing, F.; Cambria, E.; Welsch, R. (2018). <a href="http://sentic.net/market-sentiment-views.pdf">Intelligent Bayesian Asset Allocation via Market Sentiment Views</a>. <i>IEEE Computational Intelligence Magazine</i> 13(4) pp 25-34. <a href="http://github.com/fxing79/ECM-LSTM">[code]</a></li>
+          <li><a href="https://dl.acm.org/doi/pdf/10.1145/3649451">Financial Sentiment Analysis: Techniques and Applications</a>. <i>ACM Comp. Surv.</i> 56(9) pp 1-42, 2024.</li>
           
           </ul>
 
               <br />
 
 
-          For a full list of publications, see [ <a href="https://scholar.google.com.sg/citations?hl=en&user=cSn5TrAAAAAJ">Google Scholar</a> ] or [ <a href="http://dblp.org/pid/191/2446.html">DBLP</a> ].
+          For a more complete list of publications, see [ <a href="https://scholar.google.com.sg/citations?hl=en&user=cSn5TrAAAAAJ">Google Scholar</a> ] or [ <a href="http://dblp.org/pid/191/2446.html">DBLP</a> ].
 
 
 
           <h2 id="bio">Research Directions</h2>  
-                <p>My general research interests are AI in finance and digital business. More specifically, my approach is to organize sprints and create projects with my students or collaborators under four umbrella themes: <a href="#u-fta">financial text analytics</a>, <a href="#u-ifm">intelligent finance models</a>, <a href="#u-kde">knowledge discovery and engineering</a>, and <a href="#u-gf">green finance</a>. </p>
+                <p>My general research interests are AI, FinTech, digitalization, and I consult on these topics. <br /><br />
+
+My working approach is to organize sprints and projects with my students and/or collaborators under these three umbrella directions that are meaningful both theoretically and practically: <a href="#u-ibsm">intelligent business systems and modeling</a>, <a href="#u-keds">knowledge engineering, AI artifacts, and design science</a>, and <a href="#u-hai">human-AI interaction</a>. </p>
+
 
                 <div class="item">
-                  <img src="images/fta.png" style="float:left; margin: 0em 0.5em 0em 0em;" width=48% height=16%/>
-                    <h2 id="u-fta">Financial text analytics</h2>
-                    <p>Text consists of the majority of alternative data. Analyzing the versatile financial text coming from different sources, including corporate disclosures, annual reports, earning calls, financial news and social media, however, presents challenges. This thread of research designs NLP methods and investigates their adaptation to the various language domains in finance.
-                    </p>
-                    <p>Representative findings are:
-                        <ul style="list-style-type:square">
-                        <li>In predictive analytics, <a href="https://dspace.mit.edu/handle/1721.1/116314?show=full">text source and predictive horizon</a> are two primary factors to consider.</li>                         
-                        <li><a href="https://www.growkudos.com/publications/10.1145%25252F3580480/reader">Parallel knowledge integration</a> is the most effective approach to build a neuro-symbolic model for financial sentiment analysis.</li> 
-                        </ul>
-                      </p>
-                </div>
-                <br />
-
-                <div class="item">
-                  <img src="images/ifm.png" style="float:left; margin: 0em 0.5em 0em 0em;" width=48% height=16%/>
-                    <h2 id="u-ifm">Intelligent finance models</h2>
-                    <p>This stream of research is dual to <a href="#u-fta">financial text analytics</a>: we live in a world where financial services and markets are digitalizing, providing an unprecedented amount of information to support decision-making. Traditional models in finance, developed decades ago, has overlooked such unstructured information. By leveraging on the methods developed to monitor public moods and discussions. This new information can be integrated to the financial forecasting and investing models to help improve them. An ongoing project in this stream is:
-                        <ul style="list-style-type:square">
-                        <li>Digitalization of the modern portfolio theory (MPT).</li>                         
+                  <img src="images/082839.png" style="float:left; margin: 0em 0.5em 0em 0em;" width=48% height=16%/>
+                    <h2 id="u-ibsm">Intelligent business systems and modeling</h2>
+                    <p>We live in a world where things are digitalizing, providing an unprecedented amount of information to support better decision-making, but at the same time posing challenges for effective utilization as traditional models overlooked such unstructured information. We develop models and methods that help gain business advantages by being more intelligent!<br /><br />
+                    Case: digitalization of the modern portfolio theory (MPT)
+                        <ul class="big-indent">
+                        <li>Financial sentiment analysis for monitoring public moods and discussions.</li>  
+                        <!--<li>Developing NLP methods and investigates their adaptation to the various language domains in business and finance.</li> -->
+                        <li>Personalized risk profiling using social media data.</li>                        
                         </ul>
                     </p>
                 </div>
                 <br />
-
-                  <div class="item">
-                  <img src="images/kde.png" style="float:left; margin: 0em 0.5em 0em 0em;" width=48% height=16%/>
-                    <h2 id="u-kde">Knowledge discovery and engineering</h2>
-                    <p>Understanding financial texts requires dealing with a lot of numbers, time expressions, and contextualized arguments, many of which are not possible without external resources. Well-curated knowledge is therefore, always important. Today, most NLP studies benifit, directly or indirectly, from early efforts such as WordNet and DBpedia. In that sense, knowledge is both the purpose and the instrument (ct. Sukhomlinskii).
-                  </p>
-                  <p>
-                    Showcases under this umbrella include <a href="https://aclanthology.org/W19-5501/">NEEQ business taxonomy</a>, <a href="https://sentic.net/finsenticnet.pdf">FinSenticNet</a>, ESGSenticNet, and a <a href="https://doi.org/10.1016/j.ipm.2018.11.002">lexicon domain-adaptation method</a>. 
-                  </p>
-                </div>
                 <br />
 
                   <div class="item">
-                  <img src="images/gf.png" style="float:left; margin: 0em 0.5em 0em 0em;" width=48% height=16%/>
-                    <h2 id="u-gf">AI and sustainable finance</h2>
-                    <p>Certain economic activities and developments have negative externality and become a global problem, e.g., environmental pollution, climate change, and infringement of our rights and privacy. The way how we use and govern technology makes a huge difference. The first wave of IT, for instance office automation, had many good environmental impacts. But with the recent prevalence of AI, we should be cautious about low efficiency or even destructive computing. Sometimes, unregulated use can turn a powerful invention into an existential threat. Some key questions to ask are:
-                    <ul style="list-style-type:square">
-                        <li>How can AI be used to discover and support greener and innovative ideas?</li>
-                        </ul>  
+                  <img src="images/083505.png" style="float:right; margin: 0em 0.5em 0em 0em;" width=48% height=16%/>
+                    <h2 id="u-keds">Knowledge engineering and design science</h2>
+                    <p>Information and knowledge are proprietary, hence its transformation creates value and is a cornerstone of digital economy. We create more than AI models and knowledge bases --- this part largely overlaps with computer science except in a more purposely motivated and controlled way --- but also frameworks, empirical rules, management tools, and regulatory implications.<br /><br />
+
+                    AI artifacts: <a href="https://aclanthology.org/W19-5501/">NEEQ business taxonomy</a>, <a href="https://core.ac.uk/download/pdf/590878876.pdf">STFGAN</a>, <a href="https://ieeexplore.ieee.org/abstract/document/10650440">Dual-Graph NN</a>, <a href="https://sentic.net/finsenticnet.pdf">FinSenticNet</a>, <a href="https://arxiv.org/abs/2501.15720">ESGSenticNet</a> etc.<br />
+                    Framework: <a href="https://dl.acm.org/doi/pdf/10.1145/3688399">HAD</a> (how to management algorithms), <a href="https://ieeexplore.ieee.org/abstract/document/10964203">RAMAS</a> etc.<br />
+                    Empirical rule: <a href="https://dl.acm.org/doi/pdf/10.1145/3580480">mk-NN</a> (how to build neuro-symbolic systems) etc.
+                  </p>
+                </div>
+                <br />
+                <br />
+
+                  <div class="item">
+                  <img src="images/023012.png" style="float:left; margin: 0em 0.5em 0em 0em;" width=48% height=16%/>
+                    <h2 id="u-hai">Understanding human-AI interaction</h2>
+                    <p>
+
+<p>As we use more AI in our daily life, two research opportunities emerge: one (human->AI) is the pressing need to shape AI according to our social norms and values; another (AI->human) is using text analytics and beyond to see and study human behavior from new angles<br /><br />
+                    Cases:
+                        <ul class="big-indent">
+                        <li>Human-like stock market prediction.</li> 
+                        <li>Understanding human happiness factors.</li>  
+                        <li>Social effects of AI-generated-content.</li>                        
+                        </ul>
                     </p>
                 </div>
                 <br />
@@ -122,3 +118,5 @@
       </div> 
       </body>
 </html>
+
+
