--- a/teaching.html
+++ b/teaching.html
@@ -41,9 +41,9 @@
               <div class="contents">
 
     <h2 id="courses">Course information</h2>
-    <p>This semester, I am teaching "BT4103 Business Analytics Capstone Project".</br>
-            </br>
-       In the past, I have taught:</br>
+    <p>
+In the past semsters, I have taught:</br></br>
+BT4103 Business Analytics Capstone Project: 2025 Spring </br>
 IS3107 Data Engineering: 2024 Fall, 2023 Fall, 2022 Fall, 2022 Spring </br>
 BT4016 Risk Analytics for Financial Services: 2024 Spring, 2023 Spring </br>
 IS6000 Topics in Information Systems and Analytics Research: 2021 Fall </br>
@@ -53,13 +53,24 @@ CZ 2002 Object Oriented Design & Programming in Java (TA): 2016 Spring </br>
 
 
 
-    <h2 id="links">Useful books</h2>
-    <p>
-      An introductory book to fintech "<a href="https://www.amazon.sg/Fintech-New-DNA-Financial-Services/dp/1547417080">Fintech: The New DNA of Financial Services</a>".</br>
-      An advanced "AI4finance" book "<a href="http://www.doi.org/10.1007/978-3-030-30263-4">Intelligent Asset Management</a>".</br>
-      A useful reference book for PG student "<a href="https://www.amazon.sg/Chicago-Writing-Multivariate-Analysis-Second/dp/0226527875">The Chicago Guide to Writing about Multivariate Analysis</a>".
-    </p>
+    <h2 id="links">My book shelf</h2>
+
+<div class="image-grid">
+  <img src="https://m.media-amazon.com/images/I/71qtkdlcqIS._SY522_.jpg" alt="An early book on AI thoughts">
+  <img src="https://m.media-amazon.com/images/I/61XyRf3xABL._SY522_.jpg" alt="An advanced AI4finance book">
+  <img src="https://m.media-amazon.com/images/I/61TxA9Et5aL._SY522_.jpg" alt="A recent book on ML in business">
+  <img src="https://m.media-amazon.com/images/I/31DTU5P-uPL._SY445_SX342_.jpg" alt="A useful reference book for PG student on scientific writing">
+  <img src="https://m.media-amazon.com/images/I/81FBwejpQuL._SY522_.jpg" alt="A good algo trading book">
+  <img src="https://m.media-amazon.com/images/I/91lOK2jVqPL._SY522_.jpg" alt="A more data mining leaned book">
+  <img src="https://m.media-amazon.com/images/I/616eCbbSyjL._SY522_.jpg" alt="A method foundation book">
+  <img src="https://m.media-amazon.com/images/I/71ljRiJqruL._SY522_.jpg" alt="A book that covers NSM">
+
+</div>
+
+
+
     
+
     <!--<h2 id="alm-m">Alumni</h2>
     <p>
       Filippo Pallucchini</br>
