--- a/index.html
+++ b/index.html
@@ -45,25 +45,25 @@
       
       <h1>Frank Xing</h1>
       <br />
-      Assistant Professor<br />
-      School of Computing, National University of Singapore<br />
+      Associate Professor (AI and Digital Business)<br />
+      Henley Business School<br />
+      University of Reading<br />
       <br />
-      <br />
-      <strong>Where to find me</strong> office: COM2-03-39 &nbsp;&nbsp;&nbsp;&nbsp; emailto: xing(ατ)nus.edu.sg<br />
-      [<a href="https://calendar.google.com/calendar/embed?src=xingzhutian%40gmail.com&ctz=Asia%2FSingapore">calendar</a>]&nbsp;&nbsp;[<a href="/cvfx.pdf">curriculum vitae</a>]&nbsp;&nbsp;<br />
+
+      [<a href="https://frank-xing.info">school page</a>]&nbsp;&nbsp;&nbsp;&nbsp;[<a href="https://calendar.google.com/calendar/embed?src=xingzhutian%40gmail.com&ctz=Asia%2FSingapore">calendar</a>]&nbsp;&nbsp;&nbsp;&nbsp;[<a href="/cvfx.pdf">curriculum vitae</a>]&nbsp;&nbsp;<br />
       <p>
 
 
     <h2 id="bio">About me</h2>
 
     <p>
-    I am an information scientist and Assistant Professor at NUS. Prior to moving to Singapore, I lived in Wuhan, Beijing, and Hong Kong. My bio can be found here: [<a href="https://orcid.org/0000-0002-5751-3937">BIO</a>]</p>
-    <p>
-    I spend my time teaching, thinking, and being with my family.
+    GPT thinks I am a scholar who drifts between cities, decodes the pulse of digital economies, fits life in one adaptive suitcase, powers projects on explainable algorithms and post-carbon ventures with my cloud-synced curiosity, always iterating toward leaner living and bolder ideas.<br /><br />
+
+    In the physical world, my time is spent teaching, meditating, traveling, and being with my family.
     </p>
 
     <h2 id="fun">Fun facts</h2>
-            <p onclick="collapse('ag')">※ My academic genealogy [<u>click here to expand the tree</u>].<br />
+            <p onclick="collapse('ag')">※ My academic genealogy traces back to mainly mathematicians [<u>click here to expand the tree</u>] and my Erdös number is<a href="http://www.csauthors.net/distance/frank-z-xing/paul-erdos"> 3 </a>.<br />
             <ul class="domtree" id="ag" style="display: none">
 
               <style>
@@ -315,8 +315,6 @@
             </ul>
             </p>
 
-            <p onclick="collapse('ar')">※ My Erdös number is<a href="http://www.csauthors.net/distance/frank-z-xing/paul-erdos"> 3 </a>and Davis number is <a href="https://www.csauthors.net/distance/frank-z-xing/gordon-b-davis"> 4</a>.
-            </p>
 
 
 
