--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       University of Reading<br />
       <br />
 
-      [<a href="https://frank-xing.info">school page</a>]&nbsp;&nbsp;&nbsp;&nbsp;[<a href="https://calendar.google.com/calendar/embed?src=xingzhutian%40gmail.com&ctz=Asia%2FSingapore">calendar</a>]&nbsp;&nbsp;&nbsp;&nbsp;[<a href="/cvfx.pdf">curriculum vitae</a>]&nbsp;&nbsp;<br />
+      [<a href="https://www.henley.ac.uk/people/dr-frank-xing">school page</a>]&nbsp;&nbsp;&nbsp;&nbsp;[<a href="https://calendar.google.com/calendar/embed?src=xingzhutian%40gmail.com&ctz=Asia%2FSingapore">calendar</a>]&nbsp;&nbsp;&nbsp;&nbsp;[<a href="/cvfx.pdf">curriculum vitae</a>]&nbsp;&nbsp;<br />
       <p>
 
 
