--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       
       <h1>Frank Xing</h1>
       <br />
-      Associate Professor (AI and Digital Business)<br />
+      Associate Professor (AI & Digital Business)<br />
       Henley Business School<br />
       University of Reading<br />
       <br />
@@ -53,9 +53,6 @@
       [<a href="https://www.henley.ac.uk/people/dr-frank-xing">school page</a>]&nbsp;&nbsp;&nbsp;&nbsp;[<a href="https://calendar.google.com/calendar/embed?src=xingzhutian%40gmail.com&ctz=Asia%2FSingapore">calendar</a>]&nbsp;&nbsp;&nbsp;&nbsp;[<a href="/cvfx.pdf">curriculum vitae</a>]&nbsp;&nbsp;<br />
       <p>
 
-<p style="color:red;">
-    I plan to take 2 new PhD students before January 2026. Do drop me an email to see fit and discuss funding details!
-    </p>
               
     <h2 id="bio">About me</h2>
 
